--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "dnd-core": "^14.0.0",
     "firebase": "^8.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -16,7 +17,7 @@
     "web-vitals": "^1.0.1"
   },
   "resolutions": {
-    "styled-components": "^5" 
+    "styled-components": "^5"
   },
   "scripts": {
     "start": "react-scripts start",
