--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.4.3",
+    "firebase-admin": "^9.7.0",
     "firebaseui": "^4.8.0",
     "react": "^17.0.2",
     "react-dnd": "^14.0.2",
