--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.4.3",
-    "firebase-admin": "^9.7.0",
+    "firebase-admin": "^9.8.0",
+    "firebase-functions": "^3.14.1",
+    "firebase-tools": "^9.10.2",
     "firebaseui": "^4.8.0",
     "react": "^17.0.2",
     "react-dnd": "^14.0.2",
