--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "compression": "^1.7.4",
     "firebase": "^8.4.3",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1",
