--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,31 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Memesfr",
+  "name": "Memesfr",
+  "description": "Share dank memes. Become memelord.",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "memesfr_128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "",
+      "sizes": "512x512",
+      "type": "image/png"
     }
-    
   ],
-  "start_url": ".",
+  "start_url": "index.html",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#272932",
+  "background_color": "#4c4d62"
 }
