Added translations for 6 major languages. Implemented modal use for full screen view of card when user clicks.

--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "firebase-functions": "^3.14.1",
     "firebase-tools": "^9.10.2",
     "firebaseui": "^4.8.0",
+    "i18next": "^21.6.4",
+    "i18next-browser-languagedetector": "^6.1.2",
     "react": "^17.0.2",
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
     "react-firebaseui": "^5.0.2",
+    "react-i18next": "^11.15.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
